--- a/src/qt/forms/aboutdialog.ui
+++ b/src/qt/forms/aboutdialog.ui
@@ -94,6 +94,7 @@
         <string>Copyright © 2009-2014 The Bitcoin developers
 Copyright © 2012-2014 The NovaCoin developers
 Copyright © 2014 The BlackCoin developers
+Copyright © 2018 The ShardCoin developers
 Copyright © 2018 The HotshotCoin developers</string>
        </property>
        <property name="textInteractionFlags">
